--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-app",
-  "homepage": "https://arrowhead.top",
+  "homepage": "https://arrowhead.top/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
